# bountybot

./: .env.example  .flake8  .gitignore  .pylintrc  Dockerfile  MANIFEST.in  Makefile  README.md  demo_advanced_analysis.py  demo_advanced_scanners.py  demo_ai_providers.py  demo_auth.py  demo_cache.py  demo_collaboration.py  demo_continuous_validation.py  demo_database.py  demo_developer_experience.py  demo_dynamic_scanner.py  demo_integrations.py  demo_model_training.py  demo_prioritization.py  demo_prompt_caching.py  demo_reporting.py  demo_security_intelligence.py  demo_tasks.py  demo_threat_intel.py  demo_webhooks.py  demo_websocket.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_all_demos.py  test_data_consistency.py  test_installation.py  test_integration_comprehensive.py  validate_imports.py
.github/workflows/: cd.yml  ci.yml  pr-checks.yml  scheduled.yml
benchmarks/: performance_benchmark.py
bountybot/: __init__.py  async_orchestrator.py  batch_processor.py  cli.py  config_loader.py  models.py  orchestrator.py
bountybot/ai_providers/: __init__.py  anthropic_provider.py  async_anthropic_provider.py  async_base.py  async_openai_provider.py  base.py  gemini_provider.py  openai_provider.py  tracing_mixin.py
bountybot/analysis/: __init__.py  attack_chain_detector.py  exploit_complexity_analyzer.py  false_positive_detector.py
bountybot/analytics/: __init__.py  metrics_collector.py  trend_analyzer.py
bountybot/api/: __init__.py  auth.py  cli.py  models.py  rate_limiter.py  server.py
bountybot/audit/: __init__.py  audit_logger.py  audit_search.py  audit_streamer.py  compliance_reporter.py  forensic_analyzer.py  models.py  retention_manager.py
bountybot/auth/: __init__.py  auth_manager.py  models.py  password_hasher.py  rbac.py  session_manager.py
bountybot/autoscaling/: __init__.py  cost_optimizer.py  metrics_collector.py  scaling_engine.py  workload_predictor.py
bountybot/backup/: __init__.py  backup_manager.py  backup_scheduler.py  models.py  restore_manager.py  storage_backends.py
bountybot/bounty_payout/: __init__.py  budget_optimizer.py  market_analyzer.py  models.py  payout_engine.py
bountybot/cache/: __init__.py  cache_manager.py  cache_warmer.py  distributed_rate_limiter.py  redis_client.py  serializers.py
bountybot/collaboration/: __init__.py  activity_feed.py  collaboration_manager.py  models.py  sla_manager.py  workflow_engine.py
bountybot/communication/: __init__.py  models.py  response_generator.py  template_manager.py  tone_analyzer.py  translator.py
bountybot/compliance/: __init__.py  compliance_manager.py  consent_manager.py  data_anonymizer.py  models.py  pii_detector.py  policy_engine.py  retention_manager.py
bountybot/continuous_validation/: __init__.py  lifecycle_manager.py  models.py  posture_tracker.py  regression_engine.py  validation_scheduler.py
bountybot/dashboard/: __init__.py  app.py  cli.py  models.py
bountybot/database/: __init__.py  migrations.py  models.py  repository.py  session.py
bountybot/debug/: __init__.py  cli.py  error_handler.py  interactive_debugger.py  validation_replay.py
bountybot/deduplication/: __init__.py  duplicate_detector.py
bountybot/dev_tools/: __init__.py  dev_server.py  mock_data.py  test_helpers.py
bountybot/extractors/: __init__.py  http_extractor.py
bountybot/generators/: __init__.py  poc_generator.py
bountybot/graphql/: __init__.py  app.py  cli.py  context.py  mutations.py  queries.py  schema.py  subscriptions.py  types.py
bountybot/integrations/: __init__.py  base.py  email_integration.py  github_integration.py  integration_manager.py  jira_integration.py  pagerduty_integration.py  slack_integration.py
bountybot/knowledge/: __init__.py  loader.py
bountybot/logging/: __init__.py  structured_logger.py
bountybot/ml/: __init__.py  anomaly_detector.py  false_positive_predictor.py  feature_extractor.py  model_trainer.py  models.py  pattern_learner.py  researcher_profiler.py  severity_predictor.py  trend_forecaster.py
bountybot/monitoring/: __init__.py  alerts.py  health.py  metrics.py  prometheus_exporter.py  tracing.py
bountybot/outputs/: __init__.py  html_output.py  json_output.py  markdown_output.py  terminal_output.py
bountybot/parsers/: __init__.py  base.py  html_parser.py  json_parser.py  markdown_parser.py  text_parser.py
bountybot/prioritization/: __init__.py  (+1 more)
config/: default.yaml
cve_cache/: cve_cache.json
demos/: demo_advanced_features.py  demo_advanced_ml.py  demo_api.py  demo_async_performance.py  demo_audit.py  demo_autoscaling.py  demo_backup.py  demo_compliance.py  demo_dashboard.py  demo_distributed_tracing.py  demo_graphql.py  demo_html_validation.py  demo_ml.py  demo_monitoring.py  demo_recommendations.py  demo_secrets.py  demo_tenancy.py  demo_tenant_analytics.py
docs/: API.md  ARCHITECTURE.md  BACKUP.md  CICD.md  DEMOS.md  TEST_REPORT.md  TIME_SAVINGS_ANALYSIS.md
examples/: advanced_sqli_report.json  feature_gaps_demo.py  sql_injection_report.json  xss_report.md  xss_with_requests.md
k8s/: deployment.yaml
monitoring/: prometheus.yml
tests/: test_advanced_features.py  test_advanced_ml.py  test_advanced_scanners.py  test_ai_providers.py  test_analysis_features.py  test_analytics.py  test_api.py  test_async_providers.py  test_audit.py  test_auth.py  test_autoscaling.py  test_backup.py  test_bounty_payout.py  test_cache.py  test_cicd.py  test_collaboration.py  test_communication.py  test_compliance.py  test_context_aware_analyzer.py  test_continuous_validation.py  test_dashboard.py  test_database.py  test_debug_tools.py  test_dev_tools.py  test_dynamic_scanner.py  test_edge_cases.py  test_environment_validator.py  test_graphql.py  test_http_extractor.py  test_installation.py  test_integrations.py  test_ml.py  test_model_training.py  test_monitoring.py  test_parsers.py  test_poc_generator.py  test_prioritization.py  test_prompt_caching.py  test_recommendations.py  test_report_clustering.py  (+16 more)
threat_actors/: APT28.json  APT29.json  LAZARUS.json
vuln_intel/: vulnerabilities.json
(+175 files in other folders)
